Add filter and sort to tasks list; update Swagger
